@startuml

title __COVIDVIEW's Class Diagram__\n

  namespace  {
    namespace iew.CovidView {
      abstract class View.CovidView.CovidView {
          + casesButton : JButton
          + comboBox1 : JComboBox
          + comboBox2 : JComboBox
          + contentPane : JPanel
          + countryTextfield : JTextPane
          + deathsButton : JButton
          + findButton : JButton
          + graphic1 : JPanel
          + graphic2 : JPanel
          + helpButton : JButton
          + lbCountry : JLabel
          + lbRecovered : JLabel
          + lbUpdate : JLabel
          + lbVaccinated : JLabel
          + lblCasesValue : JLabel
          + lblDeathsValue : JLabel
          + lblFlag : JLabel
          + lbnewCasesToday : JLabel
          + panel_2 : JPanel
          + recoverButton : JButton
          + summaryButton : JButton
          + updateButton : JButton
          # font : String
          # panel : JPanel
          # panel_1 : JPanel
          + CovidView()
          {abstract} + fontType()
          {static} + main()
          + setImage()
          {abstract} + viewType()
          - initComponents()
          - setScaleImage()
      }
    }
  }
  

  namespace  {
    namespace iew.CovidView {
      class View.CovidView.DarkCovidView {
          + DarkCovidView()
          + fontType()
          + viewType()
      }
    }
  }
  

  namespace  {
    namespace iew.CovidView {
      class View.CovidView.LightCovidView {
          + LightCovidView()
          + fontType()
          + viewType()
      }
    }
  }
  

  View.CovidView.CovidView -up-|> javax.swing.JFrame
  View.CovidView.DarkCovidView -up-|> View.CovidView.CovidView
  View.CovidView.LightCovidView -up-|> View.CovidView.CovidView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
